# c-noe-fork

./: .gitignore  CMakeLists.txt  PROG_SO_201806.doc  README.md  TODO.md  clean_ipc.sh  compile.cmd  compile.sh  run.sh
config/: config.csv
snippet/: alarm.c  child_a_fifo.c  queue.c  struct_alloc.c  test.c
src/: TODO.md  alarm_loop.c  child_a.c  child_b.c  child_b_fifo.c  gestore.c  individuo_a.c  individuo_b.c  library.c  library.h  main.c  shm_write.c  shn_read.c  test-ipc-shm.c  test.c  write_shm.c
